# JobAssistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
evals/: __init__.py  golden.py  graders.py  judge.py  run.py
frontend/: .env.development  .env.example  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ResumeEditor.tsx  ResumePreview.test.tsx  ResumePreview.tsx  ResumeWorkspace.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  fit.test.ts  fit.ts  page-fit.test.ts  page-fit.ts  resume-editor-extensions.test.ts  resume-editor-extensions.ts  resume-preview.test.ts  resume-preview.ts  search-filters.test.ts  search-filters.ts
frontend/src/test/: setup.ts
frontend/src/types/: tiptap-markdown.d.ts
img/: README.md  architecture.mmd  deployment.mmd  intel-panel.mmd  job-search.mmd  request-lifecycle.mmd  tailoring-pipeline.mmd
models/fit-predictor/: calibration.json  tokenizer_config.json
notebooks/: train_fit_predictor.ipynb
scripts/: calibrate_page_budget.py  eval_match_predictor.py  fit_shipped_calibration.py  push_prompts_to_langsmith.py  train_match_predictor.py
src/: __init__.py  api.py  insights.py  jd_extract.py  logging_setup.py  main.py  match_predictor.py  match_predictor_calibration.py  observability.py  rate_limit.py  search.py  search_nlp.py  services.py
src/agents/: __init__.py  cover_letter.py  jd_parser.py  resume_tailor.py  schemas.py  skills_matcher.py
src/browser/: __init__.py  browserbase.py  stealth.py
src/graph/: __init__.py  state.py  workflow.py
src/intel/: red_flags.py  schemas.py
src/matching/: __init__.py  gazetteer.py  honesty.py  local_matcher.py
src/prompts/: __init__.py  cover_letter.py  jd_parser.py  registry.py  resume_tailor.py
src/scrapers/: __init__.py  base.py  jobstreet.py  linkedin.py  mycareersfuture.py
src/utils/: __init__.py  config.py  latex_renderer.py  page_budget.py  pdf_converter.py
tests/: conftest.py  test_api_stateless.py  test_browserbase.py  test_calibration.py  test_eval_graders.py  test_honesty.py  test_insights.py  test_jd_extract.py  test_judge.py  test_latex_renderer.py  test_local_matcher.py  test_observability.py  test_page_budget.py  test_prompt_registry.py  test_rate_limit.py  test_red_flags.py  test_schemas.py  test_scrapers.py  test_search.py  test_search_hybrid.py  test_search_nlp.py  test_tailor_budget.py  test_tailor_styles.py  test_train_labeling.py
