[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-agent"
version = "0.1.0"
description = "Agentic resume tailoring and job application automation system"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jason Bobo Kyaw", email = "bobokyaw1999@gmail.com" }
]
keywords = ["ai", "llm", "resume", "automation", "langgraph", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # LLM & Agent Framework — lower bounds match the working .venv; major-version
    # caps guard against silent breaking jumps (langchain 0.x->1.x burned us once).
    "langchain>=1.2.15,<2.0.0",
    "langgraph>=1.1.6,<2.0.0",
    "langchain-anthropic>=1.4.0,<2.0.0",
    "langchain-community>=0.4.1,<0.5.0",

    # PDF Processing
    # markitdown: uploaded resume PDF -> markdown. Resume/cover-letter OUTPUT is
    # rendered via LaTeX using the Tectonic binary (NOT a pip dep — install it
    # separately and put it on PATH). See src/utils/latex_renderer.py.
    "markitdown[all]>=0.1.5",

    # Web/API Framework
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.9",   # required by FastAPI for the /resume/parse upload
    "beautifulsoup4>=4.12.0",    # LinkedIn guest scraper + jd_extract HTML parsing

    # Browser Automation — JobStreet scraper (Patchright) + optional Browserbase
    # cloud-browser routing (BROWSERBASE_SCRAPERS) for LinkedIn/JobStreet in prod.
    "patchright>=1.58.2",
    "browserbase>=1.11.0",

    # Utilities
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "rich>=14.3.1",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",  # Mock httpx requests

    # Code Quality
    "ruff>=0.15.10",
    "mypy>=1.20.0",
    "pre-commit>=3.8.0",
]

# Prompt / model evaluation — dev-only experiment tracking (LangSmith, project
# 'resumeagent-evals'). Never installed in prod: `pip install -e ".[eval]"`.
# Used by evals/run.py and scripts/eval_match_predictor.py.
eval = [
    "openai>=1.40.0",   # LLM-as-judge (evals/judge.py)
    "langsmith>=0.1.100",  # evals/run.py + scripts/eval_match_predictor.py tracking
]

# Optional LangSmith observability — LLM tracing + Hub prompt versioning. langsmith
# is already a transitive dep of langchain; pinned here to make the dependency
# explicit. Off by default (see src/observability.py + LANGSMITH_* env).
observability = [
    "langsmith>=0.1.100",
]

# Phase 10 — match-predictor inference on the API host. Deliberately light:
# ONNX Runtime + tokenizers only, NO torch in production.
predictor = [
    "onnxruntime>=1.18.0",
    "tokenizers>=0.20.0",
    "huggingface-hub>=0.25.0",  # pull the version-pinned ONNX artifact
    "numpy>=1.26.0",
]

# Phase 10 — the GPU training box (RunPod or a local NVIDIA GPU). Heavy; never
# installed in prod. NOTE: plain `pip install -e ".[train]"` pulls the CPU torch
# from PyPI. On a GPU machine, afterwards reinstall the CUDA build:
#   pip install --force-reinstall --no-deps torch --index-url https://download.pytorch.org/whl/cu124
# (cu124 verified working with an RTX 3070 / driver 596.49). Re-running the plain
# install reverts torch to CPU — redo the CUDA reinstall if so.
train = [
    "torch>=2.3.0",
    "pytorch-lightning>=2.3.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "datasets>=2.20.0",
    "wandb>=0.17.0",               # optional at runtime — only used if WANDB_API_KEY is set
    "huggingface-hub>=0.25.0",     # optional — only used with --push
    "scikit-learn>=1.5.0",         # AUC / F1 metrics
    "onnx>=1.16.0",                # torch.onnx.export serialization
]

[project.scripts]
resume-agent = "src.main:main"

[project.urls]
Homepage = "https://github.com/darinatic/resume-agent"
Repository = "https://github.com/darinatic/resume-agent"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
